# rust_web_01

./: .env  Cargo.toml  README.md
cert/: cert-pass.pem  key-pass.pem
migrations/mysql/migrations/: 20231128234321_emp_email_pwd.down.sql  20231128234321_emp_email_pwd.up.sql
migrations/postgres/migrations/: 20231130023147_emp_email_pwd.down.sql  20231130023147_emp_email_pwd.up.sql
src/: auth_handlers.rs  auth_middleware.rs  bh_libs.rs  config.rs  database.rs  handlers.rs  helper.rs  lib.rs  main.rs  middleware.rs  models.rs  utils.rs
src/bh_libs/: api_status.rs  australian_date.rs
src/helper/: app_logger.rs  app_utils.rs  constants.rs  endpoint.rs  jwt_utils.rs  messages.rs
templates/: employees.html
templates/auth/: home.html  login.html
tests/: common.rs  test_auth_handlers.rs  test_handlers.rs  test_jsonwebtoken.rs
wip/: revision_014.md
