[package]
name = "learn-actix-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
time = {version = "0.3.22", default-features = false, features = ["formatting", "macros", "serde"]}
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sqlx = {version = "0.7.2", features = ["runtime-async-std-native-tls", "mysql", "macros", "time"]}
async-std = "1.12.0"
actix-web = "4.4.0"
actix-cors = "0.6.4"
tera = "1.19.1"
