[package]
name = "learn_actix_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "learn_actix_web"

[dependencies]
dotenv = "0.15.0"
time = {version = "0.3", default-features = false, features = ["formatting", "macros", "serde", "parsing", "local-offset"]}
time-tz = {version = "2.0", features = ["system"]}
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sqlx = {version = "0.7.2", features = ["runtime-async-std-native-tls", "mysql", "macros", "time"]}
async-std = "1.12.0"
actix-web = {version = "4.4.0", features = ["openssl"]}
actix-web-lab = "0.20.2"
openssl = "0.10"
actix-cors = "0.7"
tera = "1.19.1"

futures-util = "0.3"

mime = "0.3.17"

actix-session = {version = "0.8.0", features = ["redis-rs-session"]}
actix-identity = "0.6.0"

argon2 = "0.5"

jsonwebtoken = "9.2"
uuid = {version = "1.8", features = ["v4"]}

tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = {version = "0.3", features = ["fmt", "std", "local-time", "time", "env-filter"]}

[dev-dependencies]
tokio = {version = "1", features = ["full"]}
reqwest = {version = "0.11", features = ["json", "cookies"]}